--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,5 @@
 [deps]
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Tidier = "f0413319-3358-4bb0-8e7c-0c83523a93bd"
