--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,6 +6,13 @@ RUN mamba install --yes 'py-xgboost' && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 
+RUN mamba install --yes \
+    'r-cowplot' \
+    'r-table1' && \
+    mamba clean --all -f -y && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+
 RUN julia -e 'using Pkg; Pkg.activate("."); Pkg.add(["HTTP", "CSV", "DataFrames", "Tidier", "DataFramesMeta", "RDatasets", "RCall"])'
 
 USER root
