--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,11 +32,10 @@
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
-				"python.defaultInterpreterPath": "/opt/conda/bin/python", 
-				"julia.executablePath": "/opt/julia-1.9.2/bin/julia"
+				"python.defaultInterpreterPath": "/opt/conda/bin/python"
 			},
 			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": ["ms-python.python", "ms-toolsai.jupyter", "julialang.language-julia", "REditorSupport.r"]
+			"extensions": ["ms-python.python", "ms-toolsai.jupyter"]
 		}
 	}
 	// Use 'postCreateCommand' to run commands after the container is created.
